# UV_K5_playground

./: README.md
libs/k5_uv_system/: CMakeLists.txt  api_v27.s
openocd_scripts/: dp32g030.cfg
src/: CMakeLists.txt
src/bootscreen/: CMakeLists.txt  generate_imageheader.py  image.hpp  main.cpp
src/spectrum_fagci/: memory.ld
